update tab shortcode syntax

--- a/content/notes/UWAA556/ch01-1.md
+++ b/content/notes/UWAA556/ch01-1.md
@@ -383,7 +383,7 @@ In general, if \\( g(z) \\) is a polynomial function with roots \\( z_j \\) of d
 {{< /katex >}}
 
 {{< tabs "" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 **Example: Inverse Laplace Transform with Cauchy Residue**
 
@@ -395,8 +395,8 @@ F(s) = \frac{1}{(s + 1)^2}
 
 using the Cauchy residue formula
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 {{< katex display >}}
@@ -412,7 +412,7 @@ In this case, \\( F(s) \\) has a single pole of degree 2 at \\( s = -1 \\). The 
 = t e^{-t}
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
