--- a/content/notes/griffiths/ch1-1.md
+++ b/content/notes/griffiths/ch1-1.md
@@ -85,7 +85,7 @@ If A and B are perpendicular, then \\( \vec{A} \cdot \vec{B} = 0 \\)
 Let \\( \vec{C} = \vec{A} - \vec{B} \\), and calculate the dot product of \\( \vec{C} \\) with itself.
 
 {{% /tab %}}
-{{< tab "A" >}}
+{{% tab "A" %}}
 
 {{< katex display >}}
 \vec{C} \cdot \vec{C} = ( \vec{A} - \vec{B} ) \cdot (\vec{A} - \vec{B}) = \vec{A} \cdot \vec{A} - \vec{A} \cdot \vec{B} - \vec{B} \cdot \vec{A} + \vec{B} \cdot \vec{B}
@@ -99,7 +99,7 @@ C^2 = A^2 + B^2 - 2AB\cos \theta
 
 This is the law of cosines.
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -223,12 +223,12 @@ __Rule (iv):__ To calculate the cross product, form the determinant whose first 
 #### Example 1.2
 
 {{< tabs "ex1.2" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the angle between the face diagonals of a cube.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 __Solution__
 We might as well use a cube of side 1, and place it as shown in Fig 1.10, with one corner at the origin. The face diagonals \\( \vec{A} \\) and \\( \vec{B} \\) are
@@ -258,7 +258,7 @@ Therefore,
 
 Of course, you can get the answer more easily by drawing in a diagonal across the top of the cube, completing the equilateral triangle. But in cases where the geometry is not so simple, this device of comparing the abstract and component forms of the dot product can be a very efficient means of finding angles.
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
