--- a/content/notes/griffiths/ch1-2.md
+++ b/content/notes/griffiths/ch1-2.md
@@ -70,12 +70,12 @@ What would it mean for the gradient to vanish? If \\( \grad{T} = 0 \\)  at (x, y
 #### Example 1.3
 
 {{< tabs "ex1.3" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the gradient of \\( r = \sqrt{x^2 + y^2 + z^2} \\) (the magnitude of the position vector)
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 {{< katex display >}}
 \begin{aligned}
@@ -87,7 +87,7 @@ Find the gradient of \\( r = \sqrt{x^2 + y^2 + z^2} \\) (the magnitude of the po
 
 Does this makes sense? Well, it says that the distance from the origin increases most rapidly in the radial direction, and that its rate of increase in that direction is 1... just what you'd expect.
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -150,12 +150,12 @@ on the surface. If the material spreads out, then you dropped it at a point of p
 #### Example 1.4
 
 {{< tabs "ex1.4" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Suppose the functions in Fig 1.18 are \\( \vec{v_a} = \vec{r} = x \vu{x} + y \vu{y} + z \vu{z} \\), \\( \vec{v_b} = \vu{z} \\), and \\( \vec{v_c} = z\vu{z} \\). Calculate their divergences.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 {{< katex display >}}
 \div{\vec{v_a}} = \pdv{}{x} (x) + \pdv{}{y} (x) + \pdv{}{z} (z) = 1 + 1 + 1 = 3
@@ -173,7 +173,7 @@ as expected.
 \div{\vec{v_b}} = \pdv{}{x} (0) + \pdv{}{0} (x) + \pdv{}{z} (z) = 0 + 0 + 1 = 1
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -202,12 +202,12 @@ of nonzero curl. A whirlpool would be a region of large curl.
 #### Example 1.5
 
 {{< tabs "1.5" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Suppose the function sketched in Fig 1.19a is \\( \vec{v_a} = -y \vu{x} + x \vu{y} \\), and that in Fig 1.19b is \\( \vec{v_b} = x \vu{y} \\). Calculate their curls.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 {{< katex display >}}
 \curl{\vec{v_a}} = \begin{vmatrix}
@@ -229,7 +229,7 @@ and
 
 As expected, these curls point in the +z direction. (Incidentally, they both have zero divergence, as you might guess from the pictures: nothing is "spreading out"... it just "swirls around.")
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
