--- a/content/notes/griffiths/ch1-4.md
+++ b/content/notes/griffiths/ch1-4.md
@@ -97,12 +97,12 @@ Notice, finally, that \\( r \\) ranges from \\( 0 \\) to \\( \infty \\), \\( \ph
 #### Example 1.13
 
 {{< tabs "ex1.13" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the volume of a sphere of radius R
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Well, we know that we _should_ get \\( \frac{4}{3} \pi R^3 \\). Let's see what happens...
 
@@ -116,7 +116,7 @@ V & = \int \dd \tau = \int_{r = 0} ^R \dd r \int_{\theta = 0} ^{\pi} r \dd \thet
 
 Great!
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 So far we have talked only about the _geometry_ of spherical coordinates. Now I would like to "translate" the vector derivatives (gradient, divergence, curl, and Laplacian) into \\( r, \theta, \phi \\) notation. In principle, this is entirely straightforward: in the case of the gradient,
