--- a/content/notes/griffiths/ch1-5.md
+++ b/content/notes/griffiths/ch1-5.md
@@ -103,7 +103,7 @@ and \\( \eqref{1.89} \\) generalizes to
 #### Example 1.14
 
 {{< tabs "ex1.14" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Evaluate the integral
 
@@ -111,14 +111,14 @@ Evaluate the integral
 \int_0 ^3 x^3 \delta(x-2) \dd x 
 {{< /katex >}}
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 Easy peasy. The delta function picks out the value of \\( x^3 \\) at the point x = 2, so the integral is \\( 2^3 = 8 \\). Notice that if the limits of integration had not included x = 2, then the answer would be 0.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -133,7 +133,7 @@ for all ("ordinary") functions f(x).
 #### Example 1.15
 
 {{< tabs "ex1.15" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Show that 
 
@@ -143,8 +143,8 @@ Show that
 
 where k is any (nonzero) constant. (In particular, \\( \delta(-x) = \delta(x). \\))
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 For an arbitrary test function f(x), consider the integral
@@ -168,7 +168,7 @@ Changing variables, we let \\( y \equiv kx \\) so that \\( x = y/k \\) and \\( \
 According to our criterion \\( \eqref{1.93} \\), therefore, \\( \delta(kx) \\) and \\( (1/|k|)\delta(x) \\) are equal.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -223,7 +223,7 @@ where, as always, \\( \vec{\gr} \\) is the separation vector \\( \vec{\gr} \equi
 #### Example 1.16
 
 {{< tabs "ex1.16" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Evaluate the integral
 
@@ -233,8 +233,8 @@ J = \int_V (r^2 + 2) \div \left( \frac{\vu{r}}{r^2} \right) \dd \tau
 
 where \\( V \\) is a sphere of radius R centered at the origin.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 __Solution 1__
 Use \\( \eqref{1.99} \\) to rewrite the divergence, and \\( \eqref{1.98} \\) to do the integral:
@@ -286,6 +286,6 @@ J = -4 \pi R^2 + r \pi (R^2 + 2) = 8 \pi
 
 > In proper mathematical jargon, "sphere" denotes the surface, and "ball" the volume it encloses. But physicists are (as usual) sloppy about this sort of thing, and I use the word "sphere" for both the surface and the volume. Where the meaning is not clear from the context, I will write "spherical surface" or "spherical volume." The language police tell me that the former is redundant and the latter an oxymoron, but a poll of my physics colleagues reveals that this is (for us) the standard usage.
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
