--- a/content/notes/griffiths/ch2-1.md
+++ b/content/notes/griffiths/ch2-1.md
@@ -85,12 +85,12 @@ What exactly _is_ an electric field? I have deliberately begun with what you mig
 #### Example 2.1
 
 {{< tabs "ex2.1" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the electric field a distance z above the midpoint between two equal charges (q), a distance d apart (Fig. 2.4a)
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Let \\( \vec{E_1} \\) be the field of the left charge alone, and \\( \vec{E_2} \\) that of the right charge alone (Fig. 2.4b). Adding them (vectorially), the horizontal components cancel and the vertical components conspire
 
@@ -109,7 +109,7 @@ _Check_: When \\( z \gg d \\) you're so far away that it just looks like a singl
 
 <p align="center"> <img alt="Figure 2.4" src="/r/img/griffiths/2.4.png" /> </p>
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ## 2.1.4: Continuous Charge Distributions
@@ -158,18 +158,18 @@ Equation \\( \eqref{2.8} \\) itself is often referred to as "Coulomb's law," bec
 #### Example 2.2
 
 {{< tabs "ex2.2" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the electric field a distance z above the midpoint of a straight line segment of length \\( 2L \\) that carries a uniform line charge \\( \lambda \\) (Fig. 2.6).
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 TODO!
 
 <p align="center"> <img alt="Figure 2.6" src="/r/img/griffiths/2.6.png" /> </p>
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
