--- a/content/notes/griffiths/ch2-2.md
+++ b/content/notes/griffiths/ch2-2.md
@@ -146,12 +146,12 @@ I must interrupt the theoretical development at this point to show you the extra
 #### Example 2.3
 
 {{< tabs "ex2.3" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the field outside a uniformly charged solid sphere of radius R and total charge q
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Imagine a spherical surface at radius \\( r > R \\) (Fig. 2.18). This is called a __Gaussian surface__ in the trade. Gauss's law says that
 
@@ -190,7 +190,7 @@ or
 Notice a remarkable feature of this result: the field outside the sphere is exactly the same as it would have been if all the charge had been concentrated at the center.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -207,14 +207,14 @@ Although 2 and 3 technically require infinitely long cylinders, and planes exten
 #### Example 2.4
 
 {{< tabs "ex2.4" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A long cylinder (Fig 2.21) carries a charge density that is proportional to the distance from the axis: \\( \rho = ks \\) for some constant \\( k \\). Find the electric field inside this cylinder.
 
 <p align="center"> <img alt="Figure 2.21" src="/r/img/griffiths/2.21.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Draw a Gaussian cylinder of length l and radius s. For this surface, Gauss's law states
 
@@ -256,19 +256,19 @@ or, finally,
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
 #### Example 2.5
 
 {{< tabs "ex2.5" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 An infinite plane carries a uniform surface charge \\( \sigma \\). Find its electric field.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Draw a Gaussian pillbox, extending equal distances above and below the plane (Fig. 2.22). Apply Gauss's law to this surface:
 
@@ -306,25 +306,25 @@ It seems surprising, at first, that the field of an infinite plane is _independe
 Although the direct use of Gauss's law to compute fields is limited to cases of spherical, cylindrical, and planar symmetry, we can put together combinations of objects posessing such symmetry, even though the arrangement as a whole is not symmetrical. For example, invoking the principle of superposition, we could find the field in the vicinity of two uniformly charged parallel cylinders, or a sphere near an infinite charged plane.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 #### Example 2.6
 
 {{< tabs "ex2.6" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Two infinite parallel planes carry equal but opposite uniform charge densities \\( \pm \sigma \\) (Fig 2.23). Find the field in each of the three regions: (i) to the left of both, (ii) between them, (iii) to the right of both.
 
 <p align="center"> <img alt="Figure 2.23" src="/r/img/griffiths/2.23.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The left plate produces a field \\( (1/2 \epsilon_0)\sigma \\), which points away from it (Fig. 2.24) to the left in region in (i) and to the right in regions (ii) and (iii). The right plate, being negatively charged, produces a field \\( (1/2 \epsilon_0)\sigma \\) which points _toward_ it - to the right in regions (i) and (ii) and to the left in region (iii). The two fields cancel in regions (i) and (iii); they conspire in region (ii). Conclusion: The field between the plates is \\( \sigma / \epsilon_0 \\), and points to the right; elsewhere it is zero.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ## 2.2.4: The Curl of E
