--- a/content/notes/griffiths/ch2-4.md
+++ b/content/notes/griffiths/ch2-4.md
@@ -133,12 +133,12 @@ W = \frac{\epsilon_0}{2} \int E^2 \dd{\tau} \quad \text{(all space)} \label{2.45
 #### Example 2.9
 
 {{< tabs "ex2.9" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the energy of a uniformly charged spherical shell of total charge \\( q \\)  and radius \\( R \\)
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Use \\( \eqref{2.43} \\) in the version appropriate to surface charges
 
@@ -169,7 +169,7 @@ W_{tot} = \frac{\epsilon_0}{2 (4 \pi \epsilon_0)^2}\int \left( \frac{q^2}{r^4}  
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
