--- a/content/notes/griffiths/ch3-1.md
+++ b/content/notes/griffiths/ch3-1.md
@@ -205,17 +205,17 @@ V_1 = V_2
 
 
 {{< tabs "ex3.1" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Show that the potential is _constant_ inside an enclosure completely surrounded by conducting material, provided there is no charge within the enclosure.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 The potential on the cavity wall is some constant \\( V_0 \\) (that's item (iv) in Sect. 2.5.1), so the potential inside is a function that satisfies Laplace's equation and has the constant value \\( V_0 \\) at the boundary. It doesn't take a genius to think of _one_ solution to this problem: \\( V = V_0 \\) everywhere. The uniqueness theorem guarantees that this is the _only_ solution. (It follows that the field inside an empty cavity is zero - the same result we found in Sect. 2.5.2 on rather different grounds.)
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
