--- a/content/notes/griffiths/ch3-2.md
+++ b/content/notes/griffiths/ch3-2.md
@@ -129,14 +129,14 @@ The method just described is not limited to a single point charge; any stationar
 
 
 {{< tabs "ex3.2" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A point charge _q_ is situated a distance _a_ from the center of a grounded conducting sphere of radius _R_ (Fig. 3.12). Find the potential outside the sphere
 
 <p align="center"> <img alt="Figure 3.12" src="/r/img/griffiths/3.12.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 Examine the completely different configuration, consisting of the point charge _q_ together with another point charge
@@ -167,7 +167,7 @@ F = \frac{1}{4\pi \epsilon_0} \frac{q q'}{(a - b)^2} = - \frac{1}{4 \pi \epsilon
 
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
     
 
