--- a/content/notes/griffiths/ch3-3.md
+++ b/content/notes/griffiths/ch3-3.md
@@ -13,14 +13,14 @@ In this section we shall attack Laplace's equation directly, using the method of
 
 
 {{< tabs "ex3.3" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Two infinite grounded metal plates lie parallel to the xz plane, one at \\( y = 0 \\), the other at \\( y = a \\) (Fig. 3.17). The left end, at \\( x = 0 \\), is closed off with an infinite strip insulated from the two plates, and maintained at a specific potential \\( V_0(y) \\). Find the potential inside this 'slot.'
 
 <p align="center"> <img alt="Figure 3.17" src="/r/img/griffiths/3.17.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The configuration is independent of z, so this is really a two-dimensional problem. In mathematical terms, we must solve Laplace's equation,
 
@@ -172,7 +172,7 @@ V(x, y) = \frac{2V_0}{\pi} \tan^{-1} \left( \frac{\sin(\pi y / a)}{\sinh(\pi x /
 In this form, it is easy to check that Laplace's equation is obeyed and the four boundary conditions are satisfied
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -193,14 +193,14 @@ The sine functions are orthogonal \\( \eqref{3.33} \\); that is the property on 
 #### Example 3.4
 
 {{< tabs "ex3.4" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Two infinitely-long grounded metal plates, again at \\( y=0 \\) and \\( y=a \\) are connected at \\( x= \pm b \\) by metal strips maintained at a constant potential \\( V_0 \\), as shown in Fig. 3.20 (a thin layer of insulation at each corner prevents them from shorting out). Find the potential inside the resulting rectangular pipe.
 
 <p align="center"> <img alt="Figure 3.20" src="/r/img/griffiths/3.20.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Once again, the configuration is independent of z. Our problem is to solve Laplace's equation
 
@@ -270,21 +270,21 @@ This function is shown in Fig. 3.21
 <p align="center"> <img alt="Figure 3.21" src="/r/img/griffiths/3.21.png" /> </p>
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
 #### Example 3.5
 
 {{< tabs "ex3.5" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 An infinitely long rectangular metal pipe (sides a and b) is grounded, but one end, at \\( x = 0 \\), a 'hot' plate is maintained at a specified potential \\( V_0(y, z) \\), as indicated in Fig. 3.22. Find the potential inside the pipe.
 
 <p align="center"> <img alt="Figure 3.22" src="/r/img/griffiths/3.22.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 This is genuinely a three-dimensional problem,
 
@@ -386,7 +386,7 @@ V(x, y, z) = \frac{16V_0}{\pi^2} \sum_{n,m=1,3,5,\ldots} ^{\infty} \frac{1}{nm} 
 Notice that successive terms decrease rapidly; a reasonable approximation would be obtained by keeping only the first few.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -507,12 +507,12 @@ The following examples illustrate the power of this important result.
 #### Example 3.6
 
 {{< tabs "ex3.6" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 The potential \\( V_0(\theta) \\) is specified on the surface of a hollow sphere, of radius _R_. Find the potential inside the sphere.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 In this case, \\( B_l = 0 \\) for all _l_, otherwise the potential would blow up at the origin. Thus,
 
@@ -570,7 +570,7 @@ V(r, \theta) = \frac{k}{2} \left[ r^0 P_{0}(\cos \theta) - \frac{r^1}{R} P_1 (\c
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -578,12 +578,12 @@ V(r, \theta) = \frac{k}{2} \left[ r^0 P_{0}(\cos \theta) - \frac{r^1}{R} P_1 (\c
 #### Example 3.7
 
 {{< tabs "ex3.7" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 The potential \\( V_0(\theta) \\) is again specified on the surface of a sphere of radius _R_, but this time we are asked to find the potential _outside_, assuming there is no charge there.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 In this case it's the \\( A_l \\)'s that must be zero (or else _V_ would not go to zero at \\( \infty \\)), so 
 
@@ -606,18 +606,18 @@ B_l = \frac{2l + 1}{2} R^{l+1} \int_0 ^\pi V_0(\theta) P_l(\cos \theta) \sin \th
 \\( \eqref{3.72} \\), with the coefficients given by \\( \eqref{3.73} \\), is the solution to our problem.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 #### Example 3.8
 
 {{< tabs "ex3.8" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 An uncharged metal sphere of radius _R_ is placed in an otherwise uniform electric field \\( \vec{E} = E_0 \vu{z} \\). The field will push positive charge to the 'northern' surface of the sphere, and - symmetrically - negative charge to the 'southern' surface (Fig. 3.24). This induced charge, in turn, distorts the field in the neighborhood of the sphere. Find the potential in the region outside the sphere.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The sphere is an equipotential - we may as well set it to zero. Then by symmetry the entire xy plane is at potential zero. This time, however, _V_ does _not_ go to zero at large _z_. In fact, far from the sphere the field is \\( E_0 \vu{z} \\) and hence
 
@@ -681,19 +681,19 @@ If you want to know the induced charge density, it can be calculated in the usua
 As expected, it is positive in the 'northern' hemisphere \\( 0 \leq \theta \leq \pi /2 \\) and negative in the 'southern' \\( \pi/2 \leq \theta \leq \pi \\).
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
 #### Example 3.9  
 
 {{< tabs "ex3.9" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A specified charge density \\( \sigma_0(\theta) \\) is glued over the surface of a spherical shell of radius _R_. Find the resulting potential inside and outside the sphere.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 You could, of course, do this by direct integration:
 
@@ -783,5 +783,5 @@ E_0 \frac{R^3}{r^2} \cos \theta
 consistent with our conclusion in Example 3.8.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
