--- a/content/notes/griffiths/ch4-1.md
+++ b/content/notes/griffiths/ch4-1.md
@@ -24,14 +24,14 @@ The constant of proportionality \\( \alpha \\) is called __atomic polarizability
 #### Example 4.1
 
 {{< tabs "ex4.1" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A primitive model for an atom consists of a point nucleus (+q) surrounded by a uniformly charged spherical cloud (-q) of radius _a_ (Fig 4.1). Calculate the atomic polarizability of such an atom.
 
 <p align="center"> <img alt="Figure 4.1a" src="/r/img/griffiths/4.1a.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 In the presence of an external field __E__, the nucleus will be shifted slightly to the right and the electron cloud to the left, as shown in Fig 4.2. (Because the actual displacements involved are extremely small, as you'll see in Prob 4.1, it is reasonable to assume that the electron cloud retains its spherical shape.) Say that equilibrium occurs when the nucleus is displaced a distance _d_ from the center of the sphere. At that point, the external field pushing the nucleus to the right exactly balances the internal field pulling it to the left: \\( E = E_e \\), where \\( E_e \\) is the field produced by the electron cloud. Now the field at a distance _d_ from the center of a uniformly charged sphere is
@@ -55,7 +55,7 @@ The atomic polarizability is therefore
 where _v_ is the volume of the atom. Although this atomic model is extremely crude, the result \\( \eqref{4.2} \\) is not too bad - it's accurate to within a factor of four or so for many simple atoms.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
