--- a/content/notes/griffiths/ch4-2.md
+++ b/content/notes/griffiths/ch4-2.md
@@ -69,14 +69,14 @@ What this means is that the potential (and hence also the field) of a polarized 
 #### Example 4.2
 
 {{< tabs "ex4.2" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the electric field produced by a uniformly polarized sphere of radius R
 
 <p align="center"> <img alt="Figure 4.9" src="/r/img/griffiths/4.9.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 We may as well choose the z axis to coincide with the direction of polarization (Fig 4.9). The volume bound charge density \\( \rho_b \\) is zero, since \\( \vec{P} \\) is uniform. The surface bound charge density is then
 
@@ -115,7 +115,7 @@ whose dipole moment is, not surprisingly, equal to the total dipole moment of th
 The field of the uniformly polarized sphere is shown in Fig 4.10.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -169,14 +169,14 @@ confirming, again, the more rigorous conclusion of Sect. 4.2.1.
 #### Example 4.3
 
 {{< tabs "ex4.3" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 There is another way of analyzing the uniformly polarized sphere, which nicely illustrates the idea of bound charge. What we have, really, is two spheres of charge: a positive sphere and a negative sphere. Without polarization the two are superimposed and cancel completely. But when the material is uniformly polarized, all the plus charges move slightly upward (the z direction) and all the minus charges move slightly downward (Fig 4.15). The two spheres no longer overlap perfectly: at the top there's a 'cap' of leftover positive charge and at the bottom a cap of negative charge. This 'leftover' charge is precisely the bound surface charge \\( \sigma_b \\)
 
 <p align="center"> <img alt="Figure 4.15" src="/r/img/griffiths/4.15.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 In Prob 2.18, you calculated the field in the region of overlap between two uniformly charged spheres; the answer was
 
@@ -199,7 +199,7 @@ V = \frac{1}{4 \pi \epsilon_0} \frac{\vec{p} \cdot \vu{r}}{r^2}
 (Remember that __d__ is some small fraction of an atomic radius; Fig 4.15 is grossly exaggerated). These answers agree, of course, wtih the results from Ex 4.2.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
     
