--- a/content/notes/griffiths/ch4-4.md
+++ b/content/notes/griffiths/ch4-4.md
@@ -49,14 +49,14 @@ is called the __relative permittivity__, or __dielectric constant__, of the mate
 #### Example 4.5
 
 {{< tabs "ex4.5" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A metal sphere of radius _a_ carries a charge _Q_ (Fig 4.20). It is surrounded, out to radius _b_, by linear dielectric material of permittivity \\( \epsilon \\). Find the potential at the center (relative to infinity).
 
 <p align="center"> <img alt="Figure 4.20" src="/r/img/griffiths/4.20.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 To compute V, we need to know E; to find E, we might first try to locate the bound charge; we could get the bound charge from __P__, but we can't calculate __P__ unless we already know __E__. What we _do_ know is the free charge, and our arrangement is spherically symmetric, so we can go straight for __D__ using Eq 4.23:
@@ -106,7 +106,7 @@ and
 Notice that the surface bound charge at _a_ is _negative_ (\\( \vu{n} \\) points outward with respect to the dielectric, which is \\( + \vu{n} \\) at b, but \\( -\vu{r} \\) at a). This is natural, since the charge on the metal sphere attracts its opposite in all the dielectric molecules. It is this layer of negative charge that reduces the field, within the dielectric, from \\( 1 / 4 \pi \epsilon_0 (Q / r^2) \vu{r} \\) to \\( 1 / 4 \pi \epsilon (Q / r^2) \vu{r} \\). In this respect, a dielectric is rather like an imperfect conductor: on a conducting shell the induced surface charge would be such as to cancel out the field of Q entirely in the region \\( a < r < b \\); the dielectric does the best it can, but the cancellation is only partial.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -146,14 +146,14 @@ For example, if a free charge _q_ is embedded in a large dielectric, the field i
 #### Example 4.6
 
 {{< tabs "ex4.6" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A parallel-plate capacitor (Fig 4.23) is filled with insulating material of dielectric constant \\( \epsilon_r \\). What effect does this have on its capacitance?
 
 <p align="center"> <img alt="Figure 4.23" src="/r/img/griffiths/4.23.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Since the field is confined to the space between the plates, the dielectric will reduce __E__, and hence also the potential difference V, by a factor \\( 1 / \epsilon_r \\). Accordingly, the capacitance \\( C = Q / V \\) is increased by a factor of the dielectric constant
 
@@ -163,7 +163,7 @@ C = \epsilon_r C_{vac} \tagl{4.37}
 
 This is, in fact, a common way to beef up a capacitor
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -209,14 +209,14 @@ V_{above} = V_{below} \tagl{4.42}
 #### Example 4.7
 
 {{< tabs "ex4.7" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A sphere of homogeneous linear dielectric material is placed in an otherwise uniform electric field \\( \vec{E_0} \\) (Fig 4.27). Find the electric field inside the sphere
 
 <p align="center"> <img alt="Figure 4.27" src="/r/img/griffiths/4.27.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 This is very similar to Ex 3.8, in which an uncharged conducting sphere was introduced into a uniform field. In that case, the field of the induced charge canceled \\( \vec{E_0} \\) within the sphere. In a dielectric, the cancellation from the bound charge is incomplete.
 
@@ -296,7 +296,7 @@ We should be used to finding that the field within a polarized sphere is uniform
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -304,14 +304,14 @@ We should be used to finding that the field within a polarized sphere is uniform
 #### Example 4.8
 
 {{< tabs "ex4.8" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Suppose the entire region below the plane \\( z = 0 \\) in Fig 4.28 is filled with uniform linear dielectric material of susceptibility \\( \chi_e \\). Calculate the force on a point charge _q_ situated a distance _d_ above the origin.
 
 <p align="center"> <img alt="Figure 4.28" src="/r/img/griffiths/4.28.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The surface bound charge on the xy plane is of opposite sign to _q_, so the force will be attractive. (In view of Eq 4.39, there is no volume bound charge.) Let us first calculate \\( \sigma_b \\), using \\( \eqref{4.11} \\) and \\( \eqref{4.30} \\):
 
@@ -376,7 +376,7 @@ Accordingly, this is the correct potential for our problem. In particular, the f
 I do not claim to have provided a compelling motivation for \\( \eqref{4.52} \\) and \\( \eqref{4.53} \\) - like all image solutions, this one owes its justification to the fact that it _works_: it solves Poisson's equation, and it meets the boundary conditions. Still, discovering an image solution is not entirely a matter of guesswork. There are at least two "rules of the game": (1) You must never put an image charge into the region where you're computing the potential. (2) The image charges must add up to the correct total in each region.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -467,12 +467,12 @@ It may puzzle you that Eq. 4.55, which we derived quite generally in Chapter 2, 
 #### Example 4.9
 
 {{< tabs "ex4.9" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A sphere of radius R is filled with material of dielectric constant \\( \epsilon_r \\) and uniform embedded free charge \\( \rho_f \\). What is the energy of this configuration?
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 From Gauss's law, the displacement is
 
@@ -595,7 +595,7 @@ W_{spring} =  \frac{\rho_f}{6 \epsilon_0 \epsilon_r} \frac{(\epsilon_r - 1) \rho
 and it works out perfectly.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
