--- a/content/notes/griffiths/ch5-1.md
+++ b/content/notes/griffiths/ch5-1.md
@@ -42,14 +42,14 @@ Our main job now is to calculate the magnetic field __B__ (and for that matter t
 #### Example 5.1: Cyclotron Motion
 
 {{< tabs "ex5.1" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 We have a charged particle moving in a constant magnetic field. What is the general form of the trajectory?
 
 <p align="center"> <img alt="Figure 5.5" src="/r/img/griffiths/5.5.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The archetypical motion of a charged particle in a magnetic field is circular, with the magnetic force providing the centripetal acceleration. In Fig 5.5, a uniform magnetic field points into the page; if the charge Q moves counterclockwise, with speed _v_, around a circle of radius _R_, the magnetic force points inward, and has a fixed magnitude _QvB_ - just right to sustain uniform circular motion:
 
@@ -62,7 +62,7 @@ where _m_ is the particle's mass, and \\( p = mv \\) is its momentum. Equation 5
 I assumed that the charge moves in a plane perpendicular to \\( \vec B \\). If it starts out with some additional speed \\( v_{\parallel} \\) parallel to \\( \vec B \\) , this component of the motion is unaffected by the magnetic field, and the particle moves in a _helix_ (Fig 5.6). The radius is given by Eq 5.3, but the velocity in question is now the component perpendicular to \\( \vec B \\), \\( v_{\perp} \\) 
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
     
@@ -70,12 +70,12 @@ I assumed that the charge moves in a plane perpendicular to \\( \vec B \\). If i
 #### Example 5.2: Cycloid Motion
 
 {{< tabs "ex5.2" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A more exotic trajectory occurs if we include a uniform electric field, at right angles to the magnetic one. Suppose, for instance, that __B__ points in the x-direction, and E in the z-direction, as shown in Fig. 5.7. A positive charge is released from the origin; what path will it follow?
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Let's think it through qualitatively, first. Initially, the particle is at rest, so the magnetic force is zero, and the electric field accelerates the charge in the z-direction. As it picks up speed, a magnetic force develops which, according to Eq. 5.1, pulls the charge around to the right. The faster it goes, the stronger \\( F_{B} \\) becomes; eventually, it curves the particle back around towards the y axis. At this point the charge is moving against the electrical force, so it begins to slow down - the magnetic force then decreases, and the electrical force takes over, bringing the particle to rest at point a, in Fig. 5.7. There the entire process commences anew, carrying the particle over to point b, and so on.
 Now let's do it quantitatively. There being no force in the x-direction, the position of the particle at any time _t_ can be described by the vector \\( (0, y(t), z(t) ) \\); the velocity is therefore
@@ -153,7 +153,7 @@ u = \omega R = \frac{E}{B} \tagl{5.10}
 The particle moves as though it were a spot on the rim of a wheel rolling along the y-axis. The curve generated in this way is called a __cycloid__. Notice that the overall motion is not in the direction of __E__, as you might suppose, but perpendicular to it.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 #### Example 5.2b: Mass Spectrometer
@@ -234,14 +234,14 @@ Typically, the current is constant (in magnitude) along the wire, and in that ca
 #### Example 5.3
 
 {{< tabs "ex5.3" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A rectangular loop of wire, supporting mass m, hangs vertically with one end in a uniform magnetic field __B__, which points into the page in the shaded region of Fig 5.10. For what current I, in the loop, would the magnetic force upward exactly balance the gravitational force downward?
 
 <p align="center"> <img alt="Figure 5.10" src="/r/img/griffiths/5.10.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 First of all, the current must circulate clockwise, in order for \\( (\vec{I} \cross \vec{b}) \\) in the horizontal segment to point upward. The force is
@@ -293,7 +293,7 @@ which is precisely what we naively attributed to the magnetic force in \\( \eqre
 It may help to consider a mechanical analogy. Imagine you're sliding a trunk up a frictionless ramp, by pushing on it horizontally with a mop (Fig 5.12). The normal force (N) does no work, because it is perpendicular to the displacement. But it does have a vertical component (which in fact is what lifts the trunk), and a (backward) horizontal component (which you have to overcome by pushing on the mop). Who is doing the work here? You are, obviously - and yet your force (which is purely horizontal) is not (at least, directly) what lifts the box. The normal force plays the same passive (but crucial) role as the magnetic force in Ex 5.3: while doing no work itself, it redirects the efforts of the active agent (you, or the battery, as the case may be), from horizontal to vertical.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -343,14 +343,14 @@ The magnetic force on a volume current is therefore
 #### Example 5.4
 
 {{< tabs "ex5.4" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A current _I_ is uniformly distributed over a wire of circular cross section, with radius a (Fig 5.15). Find the volume current density _J_.
 
 <p align="center"> <img alt="Figure 5.15" src="/r/img/griffiths/5.15.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The area perpendicular to the flow is \\( \pi a^2 \\), so
 
@@ -375,7 +375,7 @@ I = \int (ks) (s \dd s \dd \phi) = 2 \pi k \int _0 ^a s^2 \dd s = \frac{2 \pi k 
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 According to Eq. 5.25, the total current crossing a surface _S_ can be written as
