--- a/content/notes/griffiths/ch5-2.md
+++ b/content/notes/griffiths/ch5-2.md
@@ -54,14 +54,14 @@ As the starting point for magnetostatics, the Biot-Savart law plays a role analo
 #### Example 5.5
 
 {{< tabs "ex5.5" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the magnetic field a distance _s_ from a long straight wire carrying a steady current _I_ (Fig 5.18).
 
 <p align="center"> <img alt="Figure 5.18" src="/r/img/griffiths/5.18.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 In the diagram, \\( \dd \vec{l'} \cross \gr \\) points out of the page, and has the magnitude
 
@@ -126,21 +126,21 @@ If the currents are antiparallel (one up, one down), the force is repulsive - co
 <p align="center"> <img alt="Figure 5.20" src="/r/img/griffiths/5.20.png" /> </p>
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
 #### Example 5.6
 
 {{< tabs "ex5.6" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the magnetic field a distance z above the center of a circular loop of radius _R_, which carries a steady current _I_ (Fig 5.21)
 
 <p align="center"> <img alt="Figure 5.21" src="/r/img/griffiths/5.21.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The field \\( \dd \vec{B} \\) attributable to the segment \\( \dd \vec{l'} \\) points as shown. As we integrate \\( \dd \vec{l'} \\)  around the loop, \\( \dd \vec{B} \\) sweeps out a cone. The horizontal components cancel, and the vertical components combine, to give
 
@@ -155,7 +155,7 @@ B(z) = \frac{\mu_0 I}{4 \pi} \left( \frac{\cos \theta}{\gr ^2} \right) 2 \pi R =
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
