--- a/content/notes/griffiths/ch5-4.md
+++ b/content/notes/griffiths/ch5-4.md
@@ -95,14 +95,14 @@ but this is incompatible with Ampere's law, since the curl of a gradient is alwa
 #### Example 5.11
 
 {{< tabs "ex5.11" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A spherical shell of radius R, carrying a uniform surface charge \\( \sigma \\), is set spinning at angular velocity \\( \omega \\). Find the vector potential it produces at __r__ (Fig 5.45).
 
 <p align="center"> <img alt="Figure 5.45" src="/r/img/griffiths/5.45.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 While it might seem natural to set the polar axis along \\( \omega \\), in fact the integration is easier if we let __r__ lie on the z axis, so that \\( \omega \\) is tilted at an angle \\( \psi \\). We may as well orient the x axis so that \\( \omega \\) lies in the xz plane, as shown in Fig 5.46. According to Eq. 5.66,
 
@@ -170,18 +170,18 @@ Curiously, the field inside this spherical shell is uniform:
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 #### Example 5.12
 
 {{< tabs "ex5.12" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the vector potential of an infinite solenoid with n turns per unit length, radius R, and current I
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 This time we cannot use Eq 5.66, since the current itself extends to infinity. But there is a cute method that does the job. Notice that
 
@@ -250,7 +250,7 @@ Outside the solenoid,
 which is just the answer we got in section 5.3 by Biot-Savart.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -384,14 +384,14 @@ Here __a__ is the "vector area" of the loop (Problem 1.62); if the loop is flat,
 #### Example 5.13
 
 {{< tabs "ex5.13" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the magnetic dipole moment of the 'bookend-shaped' loop shown in Fig 5.52. All sides have length _w_, and it carries a current _I_.
 
 <p align="center"> <img alt="Figure 5.52" src="/r/img/griffiths/5.52.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 This wire could be considered the superposition of two plane square loops  (Fig 5.53). The "extra" sides (AB) cancel when the two are put together, since the currents flow in opposite directions. The net magnetic dipole moment is
 
@@ -404,7 +404,7 @@ Its magnitude is \\( \sqrt{2} I w^2 \\) and it points along the \\( 45^{\circ} \
 <p align="center"> <img alt="Figure 5.53" src="/r/img/griffiths/5.53.png" /> </p>
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
