--- a/content/notes/griffiths/ch6-2.md
+++ b/content/notes/griffiths/ch6-2.md
@@ -67,12 +67,12 @@ What this means is that the potential (and hence also the field) of a magnetized
 #### Example 6.1
 
 {{< tabs "ex6.1" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the magnetic field of a uniformly magnetized sphere
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 Choosing the z axis along the direction of __M__ (Fig 6.12), we have
@@ -108,7 +108,7 @@ inside the sphere, and outside the sphere the field is that of a perfect dipole
 Notice that the internal field is uniform, like the electric field inside a uniformly polarized sphere (Eq. 4.14), although the actual formulas for the two cases are curiously different ( \\( \frac{2}{3} \\) in place of \\( -\frac{1}{3} \\)). The external fields are also analogous: pure dipole in both instances.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ## 6.2.2: Physical Interpretation of Bound Currents
@@ -173,13 +173,13 @@ Like the electric field, the actual microscopic magnetic field inside matter flu
 #### Problem 6.11
 
 {{< tabs "p6.11" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 In Sect 6.2.1, we began with the potential of a perfect dipole (Eq. 6.10), whereas in fact we are dealing with physical dipoles. Show, by the method of Section 4.2.3, that we nonetheless get the correct macroscopic field.
 
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 As in Section 4.2.3, we want the average of 
 
@@ -195,6 +195,6 @@ where \\( \vec{B} _ {out} \\) is due to molecules outside a small sphere around 
 
 The average of \\( \vec{B} _ {in} \\) is \\( \frac{\mu_0}{4 \pi} \frac{2 \vec{m}}{R^3} \\) - Equation 5.93 - where \\( \vec{m} = \frac{4}{3} \pi R^3 \vec{M} \\). Thus the average \\( \vec{B} _ {in} \\) is \\( 2 \mu_0 \vec{M}/3 \\). But what is left out of the integral \\( \vec{A} _ {out} \\) is the contribution of a uniformly magnetized sphere, to wit \\( 2 \mu_0 \vec{M} / 3 \\) (Equation 6.16), and this is precisely what \\( \vec{B}_{in} \\) puts back in. So we'll get the correct macroscopic field using Equation 6.10.
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
