--- a/content/notes/griffiths/ch6-3.md
+++ b/content/notes/griffiths/ch6-3.md
@@ -54,12 +54,12 @@ __H__ plays a role in magnetostatics analogous to __D__ in electroostatics: Just
 #### Example 6.2
 
 {{< tabs "ex6.2" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A long copper rod of radius \\( R \\) carries a uniformly distributed (free) current \\( I \\) (Fig 6.19). Find __H__ inside and outside the rod.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Copper is weakly diamagnetic, so the dipoles will line up opposite to the field. This results in a bound current running antiparallel to \\( I \\), within the wire, and parallel to \\( I \\) along the surface (Fig 6.20). Just how great these bound currents will be we are not yet in a position to say - but in order to calculate __H__ it is sufficient to realize that all the currents are longitudinal, so \\( \vec{B} \\), \\( \vec{M} \\), and therefore also \\( \vec{H} \\), are circumferential. Applying Eq. 6.20 to an Amperian loop of radius \\( s < R \\),
 
@@ -90,7 +90,7 @@ Outside of the wire (as always in empty space) \\( \vec{M} = 0 \\), so
 the same as for a nonmagnetized wire (Ex. 5.7). Within the wire, we are not yet quite ready to determine __B__, since we have no way of knowing __M__. (In practice, the magnetization of copper is so small that for most purposes we can ignore it altogether.)
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
