--- a/content/notes/griffiths/ch6-4.md
+++ b/content/notes/griffiths/ch6-4.md
@@ -46,14 +46,14 @@ where
 #### Example 6.3
 
 {{< tabs "ex6.3" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 An infinite solenoid (n turns per unit length, current _I_), is filled with linear material of susceptibility \\( \chi_m \\). Find the magnetic field inside the solenoid.
 
 <p align="center"> <img alt="Figure 6.22" src="/r/img/griffiths/6.22.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Since __B__ is due in part to the bound currents (which we don't yet know), we cannot compute it directly. However, this is one of those symmetrical cases in which we can get __H__ from the free current alone, using Ampere's law in the form of Eq. 6.20
 
@@ -76,7 +76,7 @@ If the medium is paramagnetic, the field is slightly enhanced; if it's diamagnet
 is in the same direction as _I_, in the former case (\\( \chi_m > 0 \\)), and opposite in the latter (\\( \chi_m < 0 \\)).
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
