--- a/content/notes/griffiths/ch7-1.md
+++ b/content/notes/griffiths/ch7-1.md
@@ -40,14 +40,14 @@ Remember back in chapter 2 when we talked about conductors and determined that \
 #### Example 7.1
 
 {{< tabs "ex7.1" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A cylindrical resistor of cross-sectional area \\( A \\) and length \\( L \\) is made from material with conductivity \\( \sigma \\) . (See Fig. 7.1; as indicated, the cross section need not be circular, but I do assume it is the same all the way down.) If we stipulate that the potential is constant over each end, and the potential difference between the ends is \\( V \\), what current flows?
 
 <p align="center"> <img alt="Figure 7.1" src="/r/img/griffiths/7.1.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 As it turns out, the electric field is _uniform_ within the wire (I'll prove this in a moment). It follows from Eq. 7.3 that the current density is also uniform, so
 
@@ -56,21 +56,21 @@ I = J A = \sigma E A = \frac{\sigma A}{L} V
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
 #### Example 7.2
 
 {{< tabs "ex7.2" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Two long coaxial metal cylinders (radii \\( a \\) and \\( b \\)) are separated by material of conductivity \\( \sigma \\) (Fig. 7.2). If they are maintained at a potential difference \\( V \\), what current flows from one to the other, in a length \\( L \\)?
 
 <p align="center"> <img alt="Figure 7.2" src="/r/img/griffiths/7.2.png" /> </p> 
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The field between the cylinders is
 
@@ -97,7 +97,7 @@ I = \frac{2 \pi \sigma L}{\ln (b / a)} V
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -121,12 +121,12 @@ and therefore the charge density is zero; any unbalanced charge resides on the s
 #### Example 7.3
 
 {{< tabs "ex7.3" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 I asserted that the field in exercise 7.1 is uniform. Let's prove it
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Within the cylinder \\( V \\) obeys Laplace's equation. What are the boundary conditions? At the left end the potential is constant - we may as well set it equal to zero. At the right end the potential is likewise constant - call it \\( V_0 \\). On the cylindrical surface, \\( \vec{J} \cdot \vu{n} = 0 \\), or else charge would be leaking out into the surrounding space (which we take to be nonconducting). Therefore \\( \vec{E} \cdot \vu{n} = 0 \\) , and hence \\( \pdv{V}{n} = 0 \\) . With \\( V \\)  or its normal derivative specified on all surfaces, the potential is uniquely determined (Prob. 3.5). But it's easy to guess one potential that obeys Laplace's equation and fits these boundary conditions:
 
@@ -145,7 +145,7 @@ which is indeed uniform.
 Contrast the enormously more difficult problem that arises if the conducting material is removed, leaving only a metal plate at either end (Fig 7.3). Evidently in the present case charge arranges itself over the surface of the wire in just such a way as to produce a nice uniform field within.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -352,14 +352,14 @@ The flux rule is a nifty short-cut for calculating motional emfs. It does not co
 #### Example 7.4
 
 {{< tabs "ex7.4" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A metal disk of radius \\( a \\) rotates with angular velocity \\( \omega \\) about a vertical axis, through a uniform field \\( \vec{B} \\), pointing up. A circuit is made by connecting one end of a resistor to the axle and the other end to a sliding contact, which touches the outer edge of the disk (Fig 7.15). Find the current in the resistor
 
 <p align="center"> <img alt="Figure 7.15" src="/r/img/griffiths/7.15.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The speed of a point on the disk at a distance \\( s \\) from the axis is \\( v = \omega s \\), so the force per unit charge is \\( \vec{f}_{mag} = \vec{v} \cross \vec{B} = \omega s B \vu{s} \\). The emf is therefore
 
@@ -374,7 +374,7 @@ I = \frac{\mathcal{E}}{R} = \frac{\omega B a^2}{2 R}
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 Example 7.4 (the __Faraday disk__, or __Faraday dynamo__) involves a motional emf that you can't calculate (at least, not directly) from the flux rule. The flux rule assumes the current flows along a well-defined path, whereas in this example the current spreads out over the whole disk. It's not even clear what the "flux through the circuit" would mean in this context.
