--- a/content/notes/griffiths/ch7-2.md
+++ b/content/notes/griffiths/ch7-2.md
@@ -73,20 +73,20 @@ Many people call this "Faraday's law." Maybe I'm overly fastidious, but I find t
 #### Example 7.5
 
 {{< tabs "ex7.5" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A long cylindrical magnet of length \\( L \\)  and radius \\( a \\)  carries a uniform magnetization \\( \vec{M} \\)  parallel to its axis. It passes at constant velocity \\( \vec{v} \\)  through a circular wire ring of slightly larger diameter (Fig. 7.22). Graph the emf induced in the ring, as a function of time.
 
 <p align="center"> <img alt="Figure 7.22" src="/r/img/griffiths/7.22.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The magnetic field is the same as that of a long solenoid with surface current \\( \vec{K}_b = M \vu{\phi} \\) . So the field inside is \\( \vec{B} = \mu_0 \vec{M} \\) , except near the ends, where it starts to spread out. The flux through the ring is zero when the magnet is far away; it builds up to a maximum of \\( \mu_0 M \pi a^2 \\)  as the leading end passes through; and it drops back to zero as the trailing end emerges (Fig. 7.23a). The emf is (minus) the derivative of \\( \Phi \\)  with respect to time, so it consists of two spikes, as shown in Fig. 7.23b.
 
 <p align="center"> <img alt="Figure 7.23" src="/r/img/griffiths/7.23.png" /> </p>
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -101,19 +101,19 @@ The induced current will flow in such a direction that the flux it produces tend
 #### Example 7.6
 
 {{< tabs "ex7.6" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 The 'jumping ring' demonstration. If you wind a solenoidal coil around an iron core (the iron is there to beef up the magnetic field), place a metal ring on top, and plug it in, the ring will jump several feet in the air (Fig 7.24). Why?
 
 <p align="center"> <img alt="Figure 7.24" src="/r/img/griffiths/7.24.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Before you turn on the current, the flux through the ring was zero. Afterward a flux appeared (upward in the diagram), and the emf generated in the ring led to a current (in the ring) which, according to Lenz's law, was in such a direction that its field tended to cancel this new flux. This means that the current in the loop is opposite to the current in the solenoid. As opposite currents repel (as we saw in our Biot-Savart calculations in the last chapter), the ring flies off.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ## 7.2.2: The Induced Electric Field
@@ -147,14 +147,14 @@ The rate of change of (magnetic) flux through the Amperian loop plays the role f
 #### Example 7.7
 
 {{< tabs "ex7.7" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A uniform magnetic field \\( \vec{B}(t) \\), pointing straight up, fills the shaded circular region of Fig. 7.25. If \\( \vec{B} \\) is changing with time, what is the induced electric field?
 
 <p align="center"> <img alt="Figure 7.25" src="/r/img/griffiths/7.25.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 \\( \vec{E} \\) points in the circumferential direction, just like the magnetic field inside a long straight wire carrying a uniform current density. Draw an Amperian loop of radius \\( s \\), and apply Faraday's law:
 
@@ -171,19 +171,19 @@ Therefore
 If \\( \vec{B} \\) is increasing, \\( \vec{E} \\) runs clockwise, as viewed from above.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
 #### Example 7.8
 
 {{< tabs "ex7.8" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A line charge \\( \lambda \\) is glued to the rim of a wheel of radius \\( b \\), which is then suspended horizontally, as shown in Fig 7.26, so that it is free to rotate (the spokes are made of some nonconducting material - wood, maybe). In the central region, out to radius \\( a \\) , there is a uniform magnetic field \\( \vec{B}_0 \\), pointing up. Now someone turns the field off. What happens?
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The changing magnetic field will induce an electric field, curling around the axis of the wheel. This electric field exerts a force on the charges at the rim, and the wheel starts to turn. According to Lenz's law, it will rotate in such a direction that its field tends to restore the upward flux. The motion, then, is counterclockwise, as viewed frrom above.
 Faraday's law, applied to the loop at radius \\( b \\), says
@@ -215,7 +215,7 @@ It doesn't matter how quickly or slowly you tum off the field; the resulting ang
 Note that it's the electric field that did the rotating. To convince you of this, I deliberately set things up so that the magnetic field is zero at the location of the charge. The experimenter may tell you she never put in any electric field - all she did was switch off the magnetic field. But when she did that, an electric field automatically appeared, and it's this electric field that turned the wheel.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -224,14 +224,14 @@ I must warn you, now, of a small fraud that tarnishes many applications of Farad
 #### Example 7.9
 
 {{< tabs "ex7.9" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 An infinitely long straight wire carries a slowly varying current \\( I(t) \\). Determine the induced electric field, as a function of the distance \\( s \\) from the wire
 
 <p align="center"> <img alt="Figure 7.27" src="/r/img/griffiths/7.27.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 In the quasistatic approximation, the magnetic field is \\( (\mu_0 I / 2 \pi s) \\) and it circles around the wire. Like the __B__-field of a solenoid, __E__ here runs parallel to the axis. For the rectangular "Amperian loop" in Fig 7.27, Faraday's law gives:
 
@@ -261,7 +261,7 @@ s \ll c \tau \tagl{7.21}
 and hence Eq. 7.20 simply does not apply, at extremely large \\( s \\).
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ## 7.2.3: Inductance
@@ -326,14 +326,14 @@ This is an astonishing conclusion: Whatever the shapes and positions of the loop
 #### Example 7.10
 
 {{< tabs "ex7.10" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A short solenoid (length \\( l \\) and radius \\( a \\), with \\( n_1 \\) turns per unit length) lies on the axis of a very long solenoid (radius \\( b \\) , \\( n_2 \\) turns per unit length) as shown in Fig 7.32. Current \\( I \\) flows in the short solenoid. What is the flux through the long solenoid?
 
 <p align="center"> <img alt="Figure 7.32" src="/r/img/griffiths/7.32.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Since the inner solenoid is short, it has a very complicated field; moreover, it puts a different flux through each turn of the outer solenoid. It would be a miserable task to compute the total flux this way. However, if we exploit the equality of the mutual inductances, the problem becomes very easy. Just look at the reverse situation: run the current \\( I \\) through the outer solenoid, and calculate the flux through the inner one. The field inside the long solenoid is constant
 
@@ -360,7 +360,7 @@ M = \mu_0 \pi a^2 n_1 n_2 l
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 Suppose now, that you vary the current in loop 1. The flux through loop 2 will vary accordingly, and Faraday's law says this changing flux will induce an emf in loop 2:
@@ -388,12 +388,12 @@ Inductance is measured in henries (H); a henry is a volt-second per ampere.
 #### Example 7.11
 
 {{< tabs "ex7.11" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the self inductance of a toroidal coil with rectangular cross-section (inner radius \\( a \\), outer radius \\( b \\), height \\( h \\)), that carries a total of \\( N \\) turns.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The magnetic field inside of a toroid is
 
@@ -415,7 +415,7 @@ L = \frac{\mu_0 N^2 h}{2 \pi} \ln \left( \frac{b}{a}  \right) \tagl{7.28}
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -425,14 +425,14 @@ Inductance (like capacitance) is an intrinsically positive quantity. Lenz's law,
 #### Example 7.12
 
 {{< tabs "ex7.12" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Suppose a current \\( I \\) is flowing around a loop, when someone suddenly cuts the wire. The current drops "instantaneously" to zero. This generates a whopping back emf, for although \\( I \\)  may be small, \\( d I / d t \\)  is enormous. (That's why you sometimes draw a spark when you unplug an iron or toaster - electromagnetic induction is desperately trying to keep the current going, even if it has to jump the gap in the circuit.) Nothing so dramatic occurs when you plug in a toaster or iron. In this case induction opposes the sudden increase in current, prescribing instead a smooth and continuous buildup. Suppose, for instance, that a battery (which supplies a constant emf \\( \mathcal{E}_0 \\) ) is connected to a circuit of resistance \\( R \\)  and inductance \\( L \\)  (Fig. 7.35). What current flows?
 
 <p align="center"> <img alt="Figure 7.35" src="/r/img/griffiths/7.35.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The total emf in this circuit is \\( \mathcal{E}_0 \\) from the battery plus \\( -L (\dv{I}{t}) \\) from the inductance. Ohm's law says
 
@@ -457,7 +457,7 @@ This function is plotted in Fig 7.36. Had there been no inductance in the circui
 <p align="center"> <img alt="Figure 7.36" src="/r/img/griffiths/7.36.png" /> </p>
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -543,14 +543,14 @@ You might find it strange that it takes energy to set up a magnetic field - afte
 #### Example 7.13
 
 {{< tabs "ex7.13" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A long coaxial cable carries current \\( I \\) (the current flows down the surface of the inner cylinder, radius \\( a \\) , and back along the outer cylinder, radius \\( b \\) ) as shown in Fig 7.40. Find the magnetic energy stored in a section of length \\( l \\)
 
 <p align="center"> <img alt="Figure 7.40" src="/r/img/griffiths/7.40.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Ampere's law will tell us that __B__ between the surfaces is
 
@@ -584,7 +584,7 @@ L = \frac{\mu_0 l}{2 \pi} \ln \left( \frac{b}{a} \right)
 
 This method of calculating the self-inductance is especially useful when the current is not confined to a single path, but spreads over some surface or volume, so that different parts of the current enclose different amounts of flux. In such cases, it can be very tricky to get the inductance directly from Eq. 7.26, and it is best to let 7.30 _define_ L
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
