--- a/content/notes/griffiths/ch7-3.md
+++ b/content/notes/griffiths/ch7-3.md
@@ -104,7 +104,7 @@ If we choose the flat surface, then \\( E = 0 \\)  and \\( I_{enc} = I \\) . If,
 #### Example 7.14
 
 {{< tabs "ex7.14" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Imagine two concentric metal spherical shells (Fig. 7.44). The inner one (radius \\( a \\) ) carries a charge \\( Q(t) \\) , and the outer one (radius \\( b \\) ) an opposite charge \\( -Q(t) \\) . The space between them is filled with Ohmic material of conductivity \\( \sigma \\) , so a radial current flows 
 
@@ -114,8 +114,8 @@ Imagine two concentric metal spherical shells (Fig. 7.44). The inner one (radius
 This configuration is spherically symmetrical, so the magnetic field has to be zero (the only direction it could possibly point is radial, and \\( \div \vec B = 0 \rightarrow \oint \vec B \cdot \dd \vec a = B(4 \pi r^2) = 0 \\), so \\( B = 0 \\)). What? I thought currents produce magnetic fields! Isn't that what Biot-Savart and Ampere taught us? How can there be a \\( \vec J \\) with no accompanying \\( \vec B \\)?
 
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 This is not a static configuration! \\( Q, \vec E, \vec J \\) are all functions of time; Ampere and Biot-Savart do not apply. The displacement current
 
@@ -126,7 +126,7 @@ J_d = \epsilon_0 \pdv{\vec E}{t} = \frac{1}{4 \pi} \frac{\dot{Q}}{r^2} \vu{r} = 
 exactly cancels the conduction current (in Eq. 7.37), and the magnetic field (determined by \\( \div \vec{B} = 0 \\) and \\( \curl \vec{B} = 0 \\) is indeed zero.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
