--- a/content/notes/griffiths/ch8-1.md
+++ b/content/notes/griffiths/ch8-1.md
@@ -148,12 +148,12 @@ Let's look at an example of the application of this statement of conservation of
 #### Problem 8.2
 
 {{< tabs "p8.2" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Consider the charging capacitor from problem 7.34. (a) Find the electric and magnetic fields in the gap, as functions of the distance s from the axis at time t (assume the charge is zero at t = 0). (b) Find the energy density \\( u_{em} \\) and the Poynting vector \\( \vec S \\) in the gap. Note especially the direction of \\( \vec S \\). Check that \\( \eqref{8.2} \\) is satisfied. (c) Determine the total energy in the gap, as a function of time. Calculate the total power flowing into the gap, by integrating the Poynting vector over the appropriate surface. Check that the power input is equal to the rate of increase of energy in the gap.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 (a) From the ch. 7 problems, we know
 
@@ -213,7 +213,7 @@ The rate of increase of energy in the gap would be the time integral of the volu
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
