--- a/content/notes/griffiths/ch8-2.md
+++ b/content/notes/griffiths/ch8-2.md
@@ -117,7 +117,7 @@ and since the above is true for all regions \\( V \\), we have our familiar cont
 #### Example: Problem 8.7
 
 {{< tabs "p8.7" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Consider an infinite parallel-plate capacitor, with the lower plate (at \\( z = -d/2 \\)) carrying surface charge density \\( -\sigma \\), and the upper plate (at \\( z = +d/2 \\)) carrying charge density \\( + \sigma \\).
 
@@ -127,8 +127,8 @@ Consider an infinite parallel-plate capacitor, with the lower plate (at \\( z = 
 
 (c) What is the electromagnetic momentum per unit area, per unit time, crossing the xy plane (or any other plane parallel to that one, between the plates)?
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 (a) Lucky for us, the magnetic field between the plates is
 
@@ -176,7 +176,7 @@ is the momentum in the z direction crossing a surface perpendicular to z, per un
 
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -205,14 +205,14 @@ where the presence of \\( \vec r \\) means it's defined about some point or axis
 #### Example 8.4
 
 {{< tabs "ex8.4" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Imagine a very long solenoid with radius \\( R \\), \\( n \\) turns per unit length, and current \\( I \\). Coaxial with the solenoid are two long cylindrical (non-conducting) shells of length \\( l \\) - one inside the solenoid at radius \\( a \\) carries a charge \\( +Q \\) distributed uniformly over its surface; the other outside the solenoid at radius \\( b \\) carries charge \\( -Q \\) . When the current in the solenoid is gradually reduced to nothing, the cylinders begin to rotate. Question: where does the angular momentum come from?
 
 <p align="center"> <img alt="Figure 8.7" src="/r/img/griffiths/8.7.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 We'll start by writing down the initial angular momentum of the system, then see what happens when we start to change the current. It is assumed that the solenoid is very long compared with the charged cylinders, and that the length of each charged cylinder is much much greater than its radius.
@@ -319,5 +319,5 @@ So the total angular momentum once the current is finally turned down is
 
 which is exactly the angular momentum that was stored in the fields, so we've successfully conserved angular momentum :)
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
