--- a/content/notes/griffiths/ch9-2.md
+++ b/content/notes/griffiths/ch9-2.md
@@ -244,12 +244,12 @@ Of course, when falling on a perfect _reflector_, the radiation pressure is twic
 #### Example Problem 9.10
 
 {{< tabs "ex9.10" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 The intensity of sunlight hitting the earth is about 1300 \\( W/m^2 \\). If sunlight strikes a perfect absorber, what pressure does it exert? How about a perfect reflector? What fraction of atmospheric pressure does this amount to?
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The radiation pressure for a perfect absorber is
 
@@ -268,6 +268,6 @@ The resulting radiation pressure is tiny compared with the normal pressures we'r
 
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
