--- a/content/notes/griffiths/ch9-5.md
+++ b/content/notes/griffiths/ch9-5.md
@@ -256,7 +256,7 @@ then the wave number is imaginary, and instead of a traveling wave we have expon
 #### Example 9.1
 
 {{< tabs "ex9.1" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Suppose we have a rectangular waveguide of dimensions 1cm by 2cm.
 
@@ -264,8 +264,8 @@ Suppose we have a rectangular waveguide of dimensions 1cm by 2cm.
 
 (b) If the waveguide were filled with lossless plastic with \\( \epsilon_r = 2\\), how would the cutoff frequency change?
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 (a) What is the lowest allowed mode? We should check the lowest TE and TM modes to find out!
 
@@ -299,7 +299,7 @@ v = \frac{c}{\sqrt{\epsilon / \epsilon_0}} = \frac{c}{\sqrt{2}}\\
 {{< /katex >}}
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 !!! question ""
