--- a/content/notes/problems/gurnett/ch02.md
+++ b/content/notes/problems/gurnett/ch02.md
@@ -13,7 +13,7 @@ Problems from chapter 2 of Gurnett and Battacharjee - Introduction to Plasma Phy
 ### 2.1
 
 {{< tabs "2.1" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Consider a plasma consisting of electrons and ions of equal number densities, \\( n = n_e = n_i \\), and temperatures \\( T_e \\) and \\( T_i \\). Assume that the electron density is determined by a term of a form \\( e^{e \Phi / k T_e} \\) and that the ion density is determined by a term of the form \\( e^{- e \Phi / kT_i} \\). Show that the Debye length \\( \lambda_D \\) is given by
 
@@ -23,8 +23,8 @@ Consider a plasma consisting of electrons and ions of equal number densities, \\
 
 How do the electron and ion Debye length terms \\( \lambda_{De} \\) and \\( \lambda_{Di} \\) compare if \\( T_e = T_i \\)? Can you find any reason to criticize the basic model used in this calculation?
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 Following the method used in the text, we insert a test charge \\( Q \\) and see what the effect on the potential is. But now, we allow both the electrons and ions to move:
@@ -44,13 +44,13 @@ The characteristic length of the differential equation is
 
 If \\( T_e = T_i \\), then \\( \lambda_{De} = \lambda_{Di} \\), but if the electrons and ions have equivalent temperatures and velocity distributions, then they must have the same mass, which definitely isn't the case.
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ### 2.2
 
 {{< tabs "2.2" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Consider two superposed slabs of electrons of mass \\( m_e \\) and ions of mass \\( m_i \\). Using the same type of analysis performed in the text, show that the natural oscillation frequency is
 
@@ -61,8 +61,8 @@ Consider two superposed slabs of electrons of mass \\( m_e \\) and ions of mass 
 where \\( \omega_{pe} \\) and \\( \omega_{pi} \\) are the electron and ion plasma frequencies (assume the ions have charge \\( e \\))
 
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 Let's position the center of the electron slab at \\( x_e \\), and the slab of ions at position \\( x_i \\). The distance we really care about is their separation \\( x \equiv x_i - x_e \\), since this is what determines the electric field between the two.
@@ -108,13 +108,13 @@ Transforming to the frequency domain,
 \omega ^2 = (\frac{1}{\omega_{p e} ^2} + \frac{1}{\omega_{pi}^2})
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ### 2.3
 
 {{< tabs "2.3" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Demonstrate the following relationship between the electron plasma frequency \\( \omega_{pe} \\), the electron thermal speed \\( C_e \\), and the Debye length \\( \lambda_{De} \\):
 
@@ -128,8 +128,8 @@ Or, equivalently, defining \\( k_D = 1 / \lambda_D \\),
 k_{De} C_e = \omega_{pe}
 {{< /katex >}}
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 We just plug in the expressions:
 
@@ -158,13 +158,13 @@ C_e ^2 = \lambda_{De}^2 \omega_{pe}^2
 C_e = \omega_{pe \lambda_{De}}
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ### 2.4
 
 {{< tabs "2.4" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A Maxwellian velocity distribution has the form
 
@@ -193,8 +193,8 @@ Show that
 {{< /katex >}}
 
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 We'll need some Gaussian integrals
 
@@ -286,13 +286,13 @@ The average of the kinetic energy is just
 = \frac{3}{2} k T
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ### 2.5
 
 {{< tabs "2.5" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 When we compute the equilibrium potential of a metal object in a plasma (assumed to be a flat plate, i.e. one-dimensional) we need to compute the electron and ion currents incident on the plate.
 
@@ -315,8 +315,8 @@ V = - \frac{k T_e}{2e} \left[ \ln \frac{m_i}{m_e} + \ln \frac{T_e}{T_i} \right]
 {{< /katex >}}
 
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 We assume that the velocity distributions are
 
@@ -378,13 +378,13 @@ e^{e \phi / k T_e} = \left( \frac{T_i m_e}{T_e m_i} \right)^{1/2} \\
 \phi = - \frac{k T_e}{2e} \left( \ln \frac{m_i}{m_e} + \ln\frac{T_e}{T_i} \right) \\ 
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ### 2.6
 
 {{< tabs "2.6" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 An infinite plate is immersed in a plasma of number density \\( n_0 \\) and temperature \\( T \\). The plate is located in the \\( x, y \\) plane and is held at a potential \\( V_0 \\) (negative) relative to the potential at a large distance from the plate. By following a procedure very similar to the Debye sheath problem, show that the potential in the plasma is given by
 
@@ -394,10 +394,10 @@ An infinite plate is immersed in a plasma of number density \\( n_0 \\) and temp
 
 where \\( \lambda_D \\) is the Debye length.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}} 
