--- a/content/notes/griffiths/ch1-3.md
+++ b/content/notes/griffiths/ch1-3.md
@@ -31,12 +31,12 @@ Ordinarily, the value of a line integral depends critically on the path taken fr
 #### Example 1.6
 
 {{< tabs "ex1.6" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Calculate the line integral of the function \\( \vec{v} = y^2 \vu{x} + 2x (y+1) \vu{y} \\) from the point a = (1, 1, 0) to the point b = (2, 2, 0), along the paths (1) and (2) in Fig 1.21. What is \\( \oint \vec{v} \cdot \dd \vec{l} \\) for the loop that goes from a to b along (1) and returns to a along (2)?
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 As always, \\( \dd \vec{l} = \dd x \vu{x} + \dd y \vu{y} + \dd z \vu{z} \\). Path (1) consists of two parts. Along the "horizontal" segment, \\( dy = dz = 0 \\) so
 
@@ -81,7 +81,7 @@ For the loop that goes out (1) and back (2), then
 \oint \vec{v} \cdot \dd \vec{l} = 11 - 10 = 1
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -109,12 +109,12 @@ Ordinarily, the value of a surface integral depends on the particular surface ch
 #### Example 1.7
 
 {{< tabs "ex1.7" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Calculate the surface integral of \\( \vec{v} = 2xz \vu{x} + (x+2) \vu{y} + y(z^2 -3) \vu{z} \\) over five sides (excluding the bottom) of the cubical box (side 2) in Fig 1.23. Let 'upward and outward' be the positive direction, as indicated by the arrows.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Taking the sides one at a time
 (i) \\( x = 2, \dd \vec{a} = \dd y \dd z \, \vu{x}, \vec{v} \cdot \dd \vec{a} = 2xyz \, \dd y \dd z = 4z \dd y \dd z \\), so
@@ -153,7 +153,7 @@ The _total_ flux is
 \int _{surface} \vec{v} \cdot \dd \vec{a} = 16 + 0 + 12 - 12 + 4 = 20
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -183,13 +183,13 @@ Because the unit vectors are constants, they come outside the integral.
 #### Example 1.8
 
 {{< tabs "ex1.8" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Calculate the volume integral of \\( T = xyz^2 \\) over the prism in Fig 1.24.
 <p align="center"> <img alt="Figure 1.24" src="/r/img/griffiths/1.24.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 {{< katex display >}}
 \begin{aligned}
@@ -198,7 +198,7 @@ Calculate the volume integral of \\( T = xyz^2 \\) over the prism in Fig 1.24.
 \end{aligned}
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 ## 1.3.2: The Fundamental Theorem of Calculus
@@ -255,12 +255,12 @@ Incidentally, as we found in Ex. 1.6, line integrals ordinarily depend on the pa
 #### Example 1.9
 
 {{< tabs "ex1.9" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Let \\( T = xy^2 \\), and take point __a__ to be the origin (0, 0, 0) and __b__ to be the point (2, 1, 0). Check the fundamental theorem for gradients.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 We know a priori that the integral should be independent of the path, but we must sill pick a specific path in order to evaluate it. Let's go out along the x axis, then up (Fig 1.27). As always, \\( \dd \vec{l} = \dd x \vu{x} + \dd y \vu{y} + \dd z \vu{z}; \grad T = y^2 \vu{x} + 2xy \vu{y} \\)
 
@@ -276,7 +276,7 @@ x = 2; \dd \vec{l} = \dd y \vu{y}; \grad T \cdot \dd \vec{l} = 4y \dd y \rightar
 <p align="center"> <img alt="Figure 1.27" src="/r/img/griffiths/1.27.png" /> </p>
 The total line integral is 2. So is this consistent with what we expect from the fundamental theorem? Well, \\( T(b) - T(a) = 2 - 0 = 2 \\), so yes!
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -302,7 +302,7 @@ This, in essence, is what the divergence theorem says.
 #### Example 1.10
 
 {{< tabs "ex1.10" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Check the divergence theorem using the function
 
@@ -310,8 +310,8 @@ Check the divergence theorem using the function
 \vec{v} = y^2 \vu{x} + (2xy + z^2) \vu{y} + (2yz) \vu{z}
 {{< /katex >}} using a unit cube at the origin as the surface boundary (Fig 1.29).
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 <p align="center"> <img alt="Figure 1.29" src="/r/img/griffiths/1.29.png" /> </p>
 
@@ -384,7 +384,7 @@ So the total flux is
 
 as we should expect.
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -420,12 +420,12 @@ Now, there are plenty of surfaces (infinitely many) that share any given boundar
 #### Example 1.11
 
 {{< tabs "ex1.11" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Suppose \\( \vec{v} = (2xz + 3y^2) \vu{y} + (4yz^2) \vu{z} \\). Check Stokes' theorem for the square surface shown in Fig 1.33.
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Here
 
@@ -469,7 +469,7 @@ So
 
 It all checks out!
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -499,7 +499,7 @@ That's "integration by parts." It applies to the situation in which you are call
 #### Example 1.12
 
 {{< tabs "ex1.12" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Evaluate the integral
 
@@ -507,8 +507,8 @@ Evaluate the integral
 \int _0 ^\infty x e^{-x} \dd x
 {{< /katex >}}
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 The exponential can be expressed as a derivative:
 
@@ -522,7 +522,7 @@ in this case, then, \\( f(x) = x \\), \\( g(x) = - e^{-x} \\), and \\( df /dx = 
 \int_0 ^\infty x e^{-x} \dd x = \int _0 ^{\infty} e^{-x} \dd x - \left. x e^{-x} \right| _{0} ^{\infty} = - \left. e^{-x} \right| _0 ^{\infty} = 1
 {{< /katex >}}
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
