--- a/content/notes/griffiths/ch3-4.md
+++ b/content/notes/griffiths/ch3-4.md
@@ -12,12 +12,12 @@ If you are very far away from a localized charge distribution, it "looks" like a
 #### Example 3.10
 
 {{< tabs "ex3.10" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A (physical) __electric dipole__ consists of two equal and opposite charges \\( (\pm q) \\) separated by a distance _d_. Find the approximate potential at points far from the dipole
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Let \\( \gr_- \\) be the distance from \\( -q \\) and \\( \gr_{+} \\) be the distance from \\( +q \\) (Fig. 3.26). 
 <p align="center"> <img alt="Figure 3.26" src="/r/img/griffiths/3.26.png" /> </p>
@@ -55,7 +55,7 @@ The potential of a dipole goes like \\( 1/r^2 \\) at large _r_; as we might have
 
 <p align="center"> <img alt="Figure 3.27" src="/r/img/griffiths/3.27.png" /> </p>
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 Example 3.10 pertains to a very special charge configuration. I propose now to develop a systematic expansion for the potential of _any_ localized charge distribution, in powers of \\( 1/r \\). Figure 3.28 defines the relevant variables; the potential at __r__ is given by
