--- a/content/notes/griffiths/ch4-3.md
+++ b/content/notes/griffiths/ch4-3.md
@@ -50,14 +50,14 @@ where \\( Q_{f_{enc}} \\) denotes the total free charge enclosed in the volume. 
 #### Example 4.4
 
 {{< tabs "ex4.4" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A long straight wire, carrying uniform line charge \\( \lambda \\), is surrounded by rubber insulation out to a radius _a_ (Fig 4.17). Find the electric displacement.
 
 <p align="center"> <img alt="Figure 4.17" src="/r/img/griffiths/4.17.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 Drawing a cylindrical Gaussian surface, of radius _s_ and length _L_, and applying \\( \eqref{4.23} \\) we find
 
@@ -80,7 +80,7 @@ Notice that this formula holds both within the insulation and outside it. In the
 Inside the rubber, the electric field cannot be determined, since we do not know __P__.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 Hold on a tick! We got all the way to a field we can calculate by Gauss's law, but we have left out the surface bound charge \\( \sigma_b \\). What happened to it? To be more precise, \\( \eqref{4.22} \\) works within a dielectric, but we cannot apply Gauss's law precisely _at_ the boundary of the dielectric, because the local \\( \rho_b \\) blows up there, taking \\( \div \vec{E} \\) with it. The polarization drops abruptly to zero outside the material, so its _derivative_ is a delta function. The surface bound charge is precisely this term, so in this sense it is actually included in \\( \rho_b \\), but we ordinarily prefer to handle it separately as \\( \sigma_b \\). We could even picture the edge of the dielectric as having some finite thickness, within which the polarization drops off to zero (which is probably a more realistic model anyway), in which case there is no \\( \sigma_b \\), \\( \rho_b \\) varies rapidly but smoothly, and Gauss's law can safely be applied everywhere. In any case, we can use \\( \eqref{4.23} \\) safely without fear of this "defect."
