--- a/content/notes/griffiths/ch5-3.md
+++ b/content/notes/griffiths/ch5-3.md
@@ -185,12 +185,12 @@ Just as the Biot-Savart law plays a role in magnetostatics that Coulomb's law as
 #### Example 5.7
 
 {{< tabs "ex5.7" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the magnetic field a distance s from a long straight wire (Fig 5.32), carrying a steady current I (the same problem from the previous section, in which we used the Biot-Savart law)
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 We know the direction of __B__ is "circumferential," circling around the wire as indicated by the right-hand rule. By symmetry, the magnitude of __B__ is constant around an Amperian loop of radius _s_, centered on the wire. So Ampere's law gives
 
@@ -206,7 +206,7 @@ B = \frac{\mu_0 I}{2 \pi s}
 
 This is the same answer we got before (Eq. 5.38), but it was waay easier to obtain this time.
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
@@ -214,12 +214,12 @@ This is the same answer we got before (Eq. 5.38), but it was waay easier to obta
 #### Example 5.8
 
 {{< tabs "ex5.8" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the magnetic field of an infinite uniform surface current \\( \vec{K} = K \vu{x} \\), flowing over the xy plane (Fig 5.33)
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 First of all, what is the direction of B? Could it have any x component? No: A glance at the Biot-Savart law (Eq. 5.42) reveals that B is perpendicular to K. Could it have a z component? No again. You could confirm this by noting that any vertical contribution from a filament at +y is canceled by the corresponding filament at - y. But there is a nicer argument: Suppose the field pointed away from the plane. By reversing the direction of the current, I could make it point toward the plane (in the Biot-Savart law, changing the sign of the current switches the sign of the field). But the z component of B cannot possibly depend on the direction of the current in the xy plane. (Think about it!) So B can only have a y component, and a quick check with your right hand should convince you that it points to the left above the plane and to the right below it.
 
@@ -241,21 +241,21 @@ With this in mind, we draw a rectangular Amperian loop as shown in Fig. 5.33, pa
 Notice that the field is independent of the distance from the plane, just like the electric field of a uniform surface charge.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
 #### Example 5.9
 
 {{< tabs "ex5.9" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 Find the magnetic field of a very long solenoid, consisting of n closely wound turns per unit length on a cylinder of radius R, each carrying a steady current I (Fig 5.34). [The point of making the windings so close is that one can then pretend each turn is circular. If this troubles you (after all, there is a net current I in the direction of the solenoid's axis, no matter how tight the winding), picture instead a sheet of aluminum foil wrapped around the cylinder, carrying the equivalent of a uniform surface current K = nI (Fig 5.35). Or make a double winding, going up to one end and then - always in the same sense - going back down again, thereby eliminating the net longitudinal current. But, in truth, this is all unnecessary fastidiousness, for the field inside a solenoid is huge (relatively speaking), and the field of the longitudinal current is at most a tiny refinement.
 
 <p align="center"> <img alt="Figure 5.34" src="/r/img/griffiths/5.34.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 First of all, what is the direction of __B__? Could it have a radial component? No. For suppose \\( B_s \\) were positive; if we reversed the direction of the current, \\( B_s \\) would then be negative. But switching I is physically equivalent to turning the solenoid upside down, and that certainly should not alter the radial field. How about a "circumferential" component? No. For \\( B_{\phi} \\)  would be constant around an Amperian loop concentric with the solenoid (Fig. 5.36), and hence
 
@@ -301,7 +301,7 @@ where B is the field inside the solenoid. (The right side of the loop contribute
 Notice that the field inside is uniform - it doesn't depend on the distance from the axis. In this sense the solenoid is to magnetostatics what the parallel-plate capacitor is to electrostatics: a simple device for producing strong uniform fields.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 Like Gauss's law, Ampere's law is always true (for steady currents), but it is not always useful. Only when the symmetry of the problem enables you to pull __B__ outside the integral \\( \oint \vec{B} \cdot \dd \vec{l} \\)  can you calculate the magnetic field from Ampere's law. When it does work, it's by far the fastest method; when it doesn't, you have to fall back on the Biot-Savart law. The current configurations that can be handled by Ampere's law are
@@ -316,14 +316,14 @@ The last of these is a surprising and elegant application of Ampere's law. As in
 #### Example 5.10
 
 {{< tabs "ex5.10" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
 A toroidal coil consists of a circular ring, or 'donut,' around which a long wire is wrapped (Fig 5.38). The winding is uniform and tight enough so that each turn can be considered a plane closed loop. The cross-sectional shape of the coil is immaterial; I made it rectangular in Fig 5.38 for the sake of simplicity, but it could just as well be circular or even some weird asymmetrical form, as in Fig 5.39, as long as the shape remains the same all the way around the ring. In that case, it follows that the magnetic field of the toroid is circumferential at all points, both inside and outside the coil.
 
 <p align="center"> <img alt="Figure 5.38" src="/r/img/griffiths/5.38.png" /> </p>
 
-{{< /tab >}}
-{{< tab "A" >}}
+{{% /tab %}}
+{{% tab "A" %}}
 
 According to the Biot-Savart law, the field at __r__ due to the current element at __r'__ is
 
@@ -381,7 +381,7 @@ and hence
 where N is the total number of turns.
 
 
-{{< /tab >}}
+{{% /tab %}}
 {{< /tabs >}}
 
 
